# Job_OS

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.voice.yml  docker-compose.yml  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  ui_blank_screen_fix.md
.claude/: wf-phase8.js
.github/: CODEOWNERS
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
components/: action-feedback.tsx  app-shell.tsx  db-banner.tsx  live-status-badge.tsx  local-first-badge.tsx  page-header.tsx  profile-switcher.tsx  settings-tools-panel.tsx  system-readiness.tsx  theme-provider.tsx  theme-script.tsx  theme-toggle.tsx
docs/: ARCHITECTURE.md  DEPLOYMENT.md  backend-api.md
lib/: app-context.ts  db.ts  modules.ts  safe.ts  theme.ts  user.ts
prisma/: schema.prisma  seed.ts
scripts/: backup.ts  benchmark-voice.ts  build-standalone.sh  install-agents.ts  run-catchup.ts  supervisor-loop.sh  test-apply-driver.ts  test-apply-knockout.ts  test-apply-router.ts  test-apply-state.ts  test-apply.ts  test-autopilot.ts  test-backup.ts  test-brief-compose.ts  test-brief-web-research.ts  test-career-agent.ts  test-company-brief.ts  test-competitor-fixes.ts  test-coverletter-standards.ts  test-crunchbase.ts  test-desktop.ts  test-e2e-journey.ts  test-followup.ts  test-goal-rerank.ts  test-hire-probability.ts  test-integrations.ts  (+35 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+365 files in other folders)
