[package]
name = "job-os"
version = "0.1.0"
description = "Job OS — an AI job-search operating system"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds where `devPath` points to the
# bundled frontend. Not used during development.
custom-protocol = ["tauri/custom-protocol"]
